--- a/tasks/nextcloud.yml
+++ b/tasks/nextcloud.yml
@@ -8,6 +8,7 @@
     - "{{ nextcloud_data_directory }}/nextcloud"
     - "{{ nextcloud_data_directory }}/php"
     - "{{ nextcloud_data_directory }}/nginx"
+    - "{{ nextcloud_data_directory }}/build"
 
 - name: Create Nextcloud user on Postgres
   postgresql_user:
@@ -61,6 +62,23 @@
     src: nextcloud/nginx.conf
     dest: "{{ nextcloud_data_directory }}/nginx/nginx.conf"
 
+- name: Template Nextcloud Dockerfile with DLib
+  template:
+    src: nextcloud/Dockerfile-facerecognition
+    dest: "{{ nextcloud_data_directory }}/build/Dockerfile"
+  when: nextcloud_with_dlib
+
+- name: Build Nextcloud image with DLib
+  docker_image:
+    source: build
+    build:
+      path: "{{ nextcloud_data_directory }}/build"
+      pull: yes
+    name: nextcloud-dlib
+    tag: latest
+    state: present
+    force_source: yes
+  when: nextcloud_with_dlib
 
 - name: Ensure LDAP network is present
   docker_network:
@@ -69,8 +87,8 @@
 - name: Nextcloud Docker Container
   docker_container:
     name: nextcloud
-    image: nextcloud:19-fpm
-    pull: true
+    image: "{% if not nextcloud_with_dlib %}{{ nextcloud_base_image }}{% else %}nextcloud-dlib{% endif %}"
+    pull: "{{ not nextcloud_with_dlib }}"
     volumes:
       - "{{ nextcloud_data_directory }}/nextcloud:/var/www/html:rw"
       - "{{ nextcloud_data_directory }}/php/php-custom.ini:/usr/local/etc/php/conf.d/zzz-custom.ini:ro"
@@ -208,7 +226,7 @@
 - name: Nextcloud Cron Docker Container
   docker_container:
     name: nextcloud-cron
-    image: nextcloud:19-fpm
+    image: "{% if not nextcloud_with_dlib %}{{ nextcloud_base_image }}{% else %}nextcloud-dlib{% endif %}"
     entrypoint: /cron.sh
     volumes:
       - "{{ nextcloud_data_directory }}/nextcloud:/var/www/html:rw"
