--- a/templates/nextcloud/nginx.conf
+++ b/templates/nextcloud/nginx.conf
@@ -125,6 +125,7 @@ http {
             fastcgi_pass php-handler;
             fastcgi_intercept_errors on;
             fastcgi_request_buffering off;
+            fastcgi_read_timeout 300;
         }
 
         location ~ ^\/(?:updater|oc[ms]-provider)(?:$|\/) {
