--- a/nas.yml
+++ b/nas.yml
@@ -140,6 +140,10 @@
       when: (nextcloud_enabled | default(False))
       tags: nextcloud
 
+    - import_tasks: tasks/seafile.yml
+      when: (seafile_enabled | default(False))
+      tags: seafile
+
     - import_tasks: tasks/gitea.yml
       when: (gitea_enabled | default(False))
       tags: gitea
