Map x-forwarded-proto for nginx in nextcloud

--- a/templates/nextcloud/nginx.conf
+++ b/templates/nextcloud/nginx.conf
@@ -31,6 +31,16 @@ http {
         server nextcloud:9000;
     }
 
+    map $http_x_forwarded_proto $forwarded_proto {
+        default http;
+        https https;
+    }
+
+    map $http_x_forwarded_port $forwarded_port {
+        default $http_x_forwarded_port;
+        ''      $server_port;
+    }
+
     server {
         listen 80;
 
@@ -74,11 +84,11 @@ http {
         rewrite ^/.well-known/webfinger /public.php?service=webfinger last;
 
         location = /.well-known/carddav {
-            return 301 $scheme://$host:$server_port/remote.php/dav;
+            return 301 $forwarded_proto://$host:$forwarded_port/remote.php/dav;
         }
 
         location = /.well-known/caldav {
-            return 301 $scheme://$host:$server_port/remote.php/dav;
+            return 301 $forwarded_proto://$host:$forwarded_port/remote.php/dav;
         }
 
         # set max upload size
