Remove Python2 dependencies for compatibility with Ubuntu 20.04

--- a/tasks/ldap.yml
+++ b/tasks/ldap.yml
@@ -158,7 +158,7 @@
 # ================
 - name: Install LDAP prerequisites
   apt:
-    name: ["python-ldap", "python3-ldap"]
+    name: ["python3-ldap"]
     state: latest
 
 - name: "Wait for OpenLDAP server is up"
