--- a/tasks/postgres.yml
+++ b/tasks/postgres.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install Postgres prerequisites
   apt:
-    name: ["libpq-dev", "python-psycopg2", "python3-psycopg2"]
+    name: ["libpq-dev", "python3-psycopg2"]
     state: latest
 
 - name: Postgres database directories
