--- a/tasks/firefly.yml
+++ b/tasks/firefly.yml
@@ -24,11 +24,10 @@
     state: present
     login_host: 127.0.0.1
 
-
 - name: Create Firefly III container
   docker_container:
     name: firefly
-    image: jc5x/firefly-iii:latest
+    image: "{{ firefly_image }}"
     pull: true
     volumes:
       - "{{ firefly_data_directory }}/export:/var/www/firefly-iii/storage/export:rw"
