Add mail configuration to Firefly III; Update Seafile traefik configuration

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -756,6 +756,7 @@ ldap_base_dn: "{{ ldap_domain.split('.') | map('regex_replace', '(.*)', 'dc=\\1'
 
 ldap_groups:
   - nextcloud
+  - seafile
   - homeassistant
   - nodered
   - admin
