Add restart-policy to z2m

--- a/tasks/zigbee2mqtt.yml
+++ b/tasks/zigbee2mqtt.yml
@@ -9,6 +9,7 @@
     image: koenkk/zigbee2mqtt
     pull: true
     purge_networks: true
+    restart_policy: unless-stopped
     networks:
       - name: web
       - name: mosquitto
