--- a/tasks/homebridge.yml
+++ b/tasks/homebridge.yml
@@ -20,7 +20,7 @@
       PUID: "{{ homebridge_user_id }}"
       HOMEBRIDGE_CONFIG_UI: "1"
       HOMEBRIDGE_CONFIG_UI_PORT: "{{ homebridge_port }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ homebridge_available_externally }}"
