--- a/tasks/mosquitto.yml
+++ b/tasks/mosquitto.yml
@@ -34,5 +34,5 @@
     ports:
       - "{{ mosquitto_port_a }}:1883"
       - "{{ mosquitto_port_b }}:9001"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
