--- a/tasks/virtual_desktop.yml
+++ b/tasks/virtual_desktop.yml
@@ -26,5 +26,5 @@
     ports:
       - "{{ vd_rdp_port }}:3389"
     privileged: true
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 2g
