--- a/tasks/airsonic.yml
+++ b/tasks/airsonic.yml
@@ -36,7 +36,7 @@
       JAVA_OPTS: "-Dserver.use-forward-headers=true -Dserver.context-path=/"
     ports:
       - "{{ airsonic_port }}:4040"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ airsonic_available_externally }}"
