--- a/tasks/bazarr.yml
+++ b/tasks/bazarr.yml
@@ -24,7 +24,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ bazarr_user_id }}"
       PGID: "{{ bazarr_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ bazarr_available_externally }}"
