--- a/tasks/cloudcmd.yml
+++ b/tasks/cloudcmd.yml
@@ -23,7 +23,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ cloudcmd_user_id }}"
       PGID: "{{ cloudcmd_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ cloudcmd_available_externally }}"
