--- a/tasks/couchpotato.yml
+++ b/tasks/couchpotato.yml
@@ -26,7 +26,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ couchpotato_user_id }}"
       PGID: "{{ couchpotato_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ couchpotato_available_externally }}"
