--- a/tasks/duplicati.yml
+++ b/tasks/duplicati.yml
@@ -28,7 +28,7 @@
       - "{{ samba_shares_root }}:/source/shares:rw"
       - "{{ docker_home }}:/source/docker:ro"
       - "/etc/timezone:/etc/timezone:ro"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ duplicati_available_externally }}"
