--- a/tasks/emby.yml
+++ b/tasks/emby.yml
@@ -22,7 +22,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ emby_user_id }}"
       PGID: "{{ emby_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     devices: "{{ emby_devices }}"
     labels:
