--- a/tasks/filerun.yml
+++ b/tasks/filerun.yml
@@ -31,7 +31,7 @@
       MYSQL_USER: filerun
       MYSQL_PASSWORD: filerun
       MYSQL_LOG_CONSOLE: "true"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
 
 - name: Create FileRun container
@@ -59,7 +59,7 @@
       APACHE_RUN_USER_ID: "33"
       APACHE_RUN_GROUP: www-data
       APACHE_RUN_GROUP_ID: "33"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 2g
     labels:
       traefik.enable: "{{ filerun_available_externally }}"
