--- a/tasks/firefly.yml
+++ b/tasks/firefly.yml
@@ -55,7 +55,7 @@
       MAIL_FROM: "{{ smtp_sender }}"
       MAIL_ENCRYPTION: "{{ smtp_secure }}"
       TZ: "{{ ansible_nas_timezone }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ firefly_available_externally }}"
