--- a/tasks/guacamole.yml
+++ b/tasks/guacamole.yml
@@ -50,7 +50,7 @@
     pull: true
     volumes:
       - "{{ guacamole_data_directory }}/config:/config:rw"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     restart: true
 
@@ -74,7 +74,7 @@
       - "{{ guacamole_data_directory }}/config:/root:rw"
     ports:
       - "{{ guacamole_port }}:8080"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     restart: true
     labels:
