--- a/tasks/jellyfin.yml
+++ b/tasks/jellyfin.yml
@@ -24,7 +24,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ jellyfin_user_id }}"
       PGID: "{{ jellyfin_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     devices: "{{ jellyfin_devices }}"
     labels:
