--- a/tasks/lidarr.yml
+++ b/tasks/lidarr.yml
@@ -22,7 +22,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ lidarr_user_id }}"
       PGID: "{{ lidarr_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ lidarr_available_externally }}"
