--- a/tasks/mylar.yml
+++ b/tasks/mylar.yml
@@ -24,7 +24,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ mylar_user_id }}"
       PGID: "{{ mylar_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ mylar_available_externally }}"
