--- a/tasks/mymediaforalexa.yml
+++ b/tasks/mymediaforalexa.yml
@@ -15,6 +15,6 @@
       - "{{ mymediaforalexa_media_directory }}:/medialibrary:rw"
       - "{{ mymediaforalexa_data_directory }}:/datadir:rw"
     network_mode: host
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
 
