--- a/tasks/netdata.yml
+++ b/tasks/netdata.yml
@@ -26,7 +26,7 @@
       - SYS_PTRACE
     security_opts:
       - apparmor:unconfined
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ netdata_available_externally }}"
