--- a/tasks/nzbget.yml
+++ b/tasks/nzbget.yml
@@ -23,7 +23,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ nzbget_user_id }}"
       PGID: "{{ nzbget_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ nzbget_available_externally }}"
