--- a/tasks/ombi.yml
+++ b/tasks/ombi.yml
@@ -22,7 +22,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ ombi_user_id }}"
       PGID: "{{ ombi_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ ombi_available_externally }}"
