--- a/tasks/openspeedtest.yml
+++ b/tasks/openspeedtest.yml
@@ -11,7 +11,7 @@
       - "{{ openspeedtest_port }}:8080"
     env:
       TZ: "{{ ansible_nas_timezone }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ openspeedtest_available_externally }}"
