--- a/tasks/qbittorrent.yml
+++ b/tasks/qbittorrent.yml
@@ -44,7 +44,7 @@
       PUID: "{{ qbittorrent_user_id }}"
       PGID: "{{ qbittorrent_group_id }}"
       UMASK_SET: "022"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ qbittorrent_available_externally }}"
