--- a/tasks/radarr.yml
+++ b/tasks/radarr.yml
@@ -24,7 +24,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ radarr_user_id }}"
       PGID: "{{ radarr_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ radarr_available_externally }}"
