--- a/tasks/sonarr.yml
+++ b/tasks/sonarr.yml
@@ -9,7 +9,7 @@
 - name: Sonarr
   docker_container:
     name: sonarr
-    image: linuxserver/sonarr
+    image: linuxserver/sonarr:preview
     purge_networks: true
     networks:
       - name: web
@@ -24,7 +24,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ sonarr_user_id }}"
       PGID: "{{ sonarr_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ sonarr_available_externally }}"
