--- a/tasks/tautulli.yml
+++ b/tasks/tautulli.yml
@@ -24,7 +24,7 @@
       TZ: "{{ ansible_nas_timezone }}"
       PUID: "{{ tautulli_user_id }}"
       PGID: "{{ tautulli_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ tautulli_available_externally }}"
