--- a/tasks/utorrent.yml
+++ b/tasks/utorrent.yml
@@ -30,7 +30,7 @@
       webui: "ng"
       dir_active: "/data/.incomplete"
       dir_completed: "/data"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ utorrent_available_externally }}"
