--- a/tasks/watchtower.yml
+++ b/tasks/watchtower.yml
@@ -9,5 +9,5 @@
     env:
       TZ: "{{ ansible_nas_timezone }}"
     command: "{{ watchtower_command }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
