--- a/tasks/znc.yml
+++ b/tasks/znc.yml
@@ -22,7 +22,7 @@
     env:
       PUID: "{{ znc_user_id }}"
       PGID: "{{ znc_group_id }}"
-    restart_policy: unless-stopped
+    restart_policy: always
     memory: 1g
     labels:
       traefik.enable: "{{ znc_available_externally }}"
