--- a/nas.yml
+++ b/nas.yml
@@ -68,9 +68,9 @@
       when: (plex_enabled | default(False))
       tags: plex
 
-    - import_tasks: tasks/openspeedtest.yml
-      when: (openspeedtest_enabled | default(False))
-      tags: openspeedtest
+    - import_tasks: tasks/librespeed.yml
+      when: (librespeed_enabled | default(False))
+      tags: librespeed
 
     - import_tasks: tasks/firefly.yml
       when: (firefly_enabled | default(False))
