--- a/tasks/stats.yml
+++ b/tasks/stats.yml
@@ -29,7 +29,7 @@
 - name: InfluxDB
   docker_container:
     name: influxdb
-    image: influxdb
+    image: influxdb:1.8
     pull: true
     networks:
       - name: stats
