--- a/tasks/zigbee2mqtt.yml
+++ b/tasks/zigbee2mqtt.yml
@@ -10,6 +10,7 @@
     pull: true
     purge_networks: true
     restart_policy: always
+    command: node index.js
     networks:
       - name: web
       - name: mosquitto
@@ -20,7 +21,14 @@
     env:
       TZ: "{{ ansible_nas_timezone }}"
     memory: 1g
+    healthcheck:
+      test: "ps aux | grep '[n]ode index.js' || exit 1"
+      interval: 30s
+      retries: 6
+      start_period: 60s
+      timeout: 15s
     labels:
+      autoheal.enable: "true"
       com.centurylinklabs.watchtower.enable: "false"
       traefik.enable: "{{ zigbee2mqtt_assistant_available_externally }}"
       traefik.http.services.zigbee2mqtt-svc.loadbalancer.server.port: "8080"
